making some more progress

--- a/linuxdoom-1.10/CMakeLists.txt
+++ b/linuxdoom-1.10/CMakeLists.txt
@@ -6,6 +6,14 @@ project(LinuxDoom)
 # Set the compiler
 set(CMAKE_C_COMPILER gcc)  # You can change this to g++ if needed
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-but-set-variable")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-but-set-variable")
+
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-pointer-to-int-cast")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-pointer-to-int-cast")
+
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -Wno-unused-const-variable")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-unused-const-variable")
 # Compiler flags
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -g -Wall -DNORMALUNIX -DLINUX")  # Add any other flags you need
 
